--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-helpers": "^1.3.2",
+    "express-method-override": "0.0.3",
     "require": "^2.4.20"
   }
 }
