--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "short",
   "version": "1.0.0",
-  "description": "",
+  "description": ":#urlShortener ______________________________________________________ 1) npm install",
   "main": "app.js",
   "scripts": {
+    "start: "node express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +24,6 @@
     "express-helpers": "^1.3.2",
     "express-method-override": "0.0.3",
     "require": "^2.4.20"
-  }
+  },
+  "devDependencies": {}
 }
