--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": ":#urlShortener ______________________________________________________ 1) npm install",
   "main": "app.js",
   "scripts": {
-    "start: "node express_server.js",
+    "start": "node express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/to-y/urlShortener#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-helpers": "^1.3.2",
