--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.14.0",
     "express-helpers": "^1.3.2",
     "express-method-override": "0.0.3",
+    "mongodb": "^2.2.10",
     "require": "^2.4.20"
   },
   "devDependencies": {}
